fix css, mostly text overflow

--- a/src/app/Conponents/grades/recent-exams/recent-exams.component.scss
+++ b/src/app/Conponents/grades/recent-exams/recent-exams.component.scss
@@ -46,6 +46,9 @@
                     color: var(--teachu-base-5);
                     width: calc(100% - 40px);
                     font-size: 20px;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                 }
 
                 .exam-grade {
