--- a/src/app/Pages/classlist/class-list.component.scss
+++ b/src/app/Pages/classlist/class-list.component.scss
@@ -15,7 +15,7 @@
             padding: 25px;
             border-radius: 5px;
             background-color: var(--teachu-base-0);
-            box-shadow: 0 0 10px 10px var(--teachu-base-1);
+            box-shadow: 0 10px 10px var(--teachu-base-1);
             transition: 250ms all ease-in-out;
 
             &:hover {
@@ -24,9 +24,9 @@
         }
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 850px) {
         .teachers{
-            justify-content: center;
+            grid-template-columns: 1fr;
         }
     }
 }
