--- a/src/app/Pages/dashboard/dashboard.component.scss
+++ b/src/app/Pages/dashboard/dashboard.component.scss
@@ -80,7 +80,7 @@
             height: auto;
             .title-bar-content {
                 display: grid;
-                grid-template-columns: 33% 33% 33%;
+                grid-template-columns: 50% 50%;
                 justify-items: center;
                 gap: 16px;
             }
