--- a/src/app/Pages/school-infos/school-infos.component.scss
+++ b/src/app/Pages/school-infos/school-infos.component.scss
@@ -39,6 +39,11 @@
             }
         }
 
+        .school-info__image{
+            width: 100%;
+            max-height: 250px;
+        }
+
         .school-info__pinned {
             position: absolute;
             top: 0;
